--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bond-calculator": "^0.1.9",
     "csvtojson": "^2.0.10",
     "google-charts-node": "^2.0.0"
   }
